# cas9-similarity-search

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.txt  README.md  docker.sh  flake.nix  requirements-docker.txt  requirements.txt  setup.cfg  shell.nix
.Trash-1001/files/: 01_train_predictor_analysis.ipynb  analyzing_molecular_methods.ipynb
.Trash-1001/info/: 00_prototypes.trashinfo  01_train_predictor_analysis.ipynb.trashinfo  05_benchmarks.trashinfo  analyze_counts.ipynb.trashinfo  analyzing_molecular_methods.ipynb.trashinfo  decode_sequencing_run.ipynb.trashinfo  view_counts.ipynb.trashinfo
data/models/: encoder_1site_model_20220614.h5  encoder_1site_model_20220615.h5  encoder_1site_triplet_20220131_1.h5  encoder_4site_model.h5  encoder_4site_model_20220630.h5  encoder_4site_model_20220701.h5  encoder_singlesite_model.h5  encoder_untrained_1site_model_20220702.h5  yield-model.h5  yield-model2022alo.h5  yield-model2022blo.h5  yield-model2022clo.h5
data/queries/: feature_seqs.h5
data/stats/:   (+8 more)
documentation/: documentation_01_train_predictor.key  finkelstein_model.key  sequencing_README.md
hybridization_search/: README.md  encoder_model_20.h5  encoder_model_20_2.h5  encoder_model_20_3.h5  encoder_model_80.h5  encoder_model_80_2.h5  encoder_model_80_3.h5  predictor_model_20.h5  predictor_model_20_2.h5  predictor_model_20_3.h5  predictor_model_80.h5  predictor_model_80_2.h5  predictor_model_80_3.h5  simulate_pairs_hyb.ipynb  yield-predictor_20.h5  yield-predictor_80.h5
random_access/: Analyzing_random_access_guides.ipynb
(+183 files in other folders)
