[metadata]
name = cas9-similarity-search
description = A DNA image similarity-search based on CAS-9.
keywords = DNA, biology, computational biology
license_file = LICENSE.txt

[options]
zip_safe = False

package_dir =
    = src
packages = find:

[options.packages.find]
where = src
        .
include_package_data=True


[options.package_data]
* = *.md
    *.toml
    *.txt
    *.gif
    *.json
    *.fast5
    *.txt.gz

[options.entry_points]
console_scripts =
    cas9-similarity-search = cas9-similarity-search:main

[pydocstyle]
convention = numpy
match-dir = (?!tests)(?!resources)(?!docs)[^\.].*
match = (?!test)(?!setup)[^\._].*\.py
inherit = false